// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse samples Sample: ActionPlansV4 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ActionPlansV4",
    "path": "ActionPlansV4/sfdx-source/LabsActionPlans",
    "pkg": "sfdx-source/LabsActionPlans",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ActionPlansV4",
    "path": "ActionPlansV4/sfdx-source/unmanaged",
    "pkg": "sfdx-source/unmanaged",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "ActionPlansV4",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Angular 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Angular",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Apex-Opensource-Library 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app",
    "pkg": "force-app",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/triggerHandler",
    "pkg": "force-app/commons/triggerHandler",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/triggerHandlerMdt",
    "pkg": "force-app/commons/triggerHandlerMdt",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/shared",
    "pkg": "force-app/commons/shared",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/callout",
    "pkg": "force-app/commons/callout",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/collections",
    "pkg": "force-app/commons/collections",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/query",
    "pkg": "./force-app/commons/query",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/database",
    "pkg": "./force-app/commons/database",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/httpMocks",
    "pkg": "./force-app/commons/httpMocks",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/testDataBuilder",
    "pkg": "./force-app/commons/testDataBuilder",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app/commons/testDataSuite",
    "pkg": "./force-app/commons/testDataSuite",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Apex-XML-Serializer 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-XML-Serializer",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Apex-for-Xero 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Apex-for-Xero",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ApexTestKit 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ApexTestKit",
    "path": "ApexTestKit/apex-test-kit",
    "pkg": "apex-test-kit",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "ApexTestKit",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ApexTriggerHandler 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ApexTriggerHandler",
    "path": "ApexTriggerHandler/apex-trigger-handler",
    "pkg": "apex-trigger-handler",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ApexTriggerHandler",
    "path": "ApexTriggerHandler/apex-trigger-loader",
    "pkg": "apex-trigger-loader",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Automated-Testing-for-Force 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Automated-Testing-for-Force",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Centralized-Salesforce-Dev-Framework 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Centralized-Salesforce-Dev-Framework",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ConnectApiHelper 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ConnectApiHelper",
    "path": "ConnectApiHelper/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Cumulus 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Cumulus",
    "path": "Cumulus/force-app",
    "pkg": "Cumulus/force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: CustomMetadataLoader 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "CustomMetadataLoader",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: EDA 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "EDA",
    "path": "EDA/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: EnhancedLightningGrid 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "EnhancedLightningGrid",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: FindNearby 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "FindNearby",
    "path": "FindNearby/src",
    "pkg": "FindNearby/src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Force.com-Helper-Classes 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Force.com-Helper-Classes",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Force.com-Toolkit-for-Facebook 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Force.com-Toolkit-for-Facebook",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ForceDotComSprintWall 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ForceDotComSprintWall",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Forceea-data-factory 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Forceea-data-factory",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: FormulaShare-DX 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "FormulaShare-DX",
    "path": "FormulaShare-DX/fs-core",
    "pkg": "fs-core",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "FormulaShare-DX",
    "path": "FormulaShare-DX/fs-sample-app",
    "pkg": "./fs-sample-app",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "FormulaShare-DX",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: HEDAP 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "HEDAP",
    "path": "HEDAP/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: HyperBatch 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "HyperBatch",
    "path": "HyperBatch/src",
    "pkg": "HyperBatch/src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Interactions-for-Student-Recruitment 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Interactions-for-Student-Recruitment",
    "path": "extra",
    "pkg": "extra",
    "status": 2,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Interactions-for-Student-Recruitment",
    "path": "Interactions-for-Student-Recruitment/src",
    "pkg": "Interactions-for-Student-Recruitment/src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Milestones-PM 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Milestones-PM",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Multi-File-Uploader-Force 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Multi-File-Uploader-Force",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: MyTriggers 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "MyTriggers",
    "path": "MyTriggers/MyTriggers",
    "pkg": "MyTriggers",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "MyTriggers",
    "path": "MyTriggers/MyTriggers",
    "pkg": "./MyTriggers",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: NPSP 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NPSP",
    "path": "NPSP/force-app",
    "pkg": "NPSP/force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: NebulaLogger 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/core",
    "pkg": "./nebula-logger/core",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/async-failure-additions/plugin",
    "pkg": "./nebula-logger/plugins/async-failure-additions/plugin",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/big-object-archiving/plugin",
    "pkg": "./nebula-logger/plugins/big-object-archiving/plugin",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/log-retention-rules/plugin",
    "pkg": "./nebula-logger/plugins/log-retention-rules/plugin",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/slack/plugin",
    "pkg": "./nebula-logger/plugins/slack/plugin",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/dev",
    "pkg": "./nebula-logger/dev",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/extra-tests",
    "pkg": "./nebula-logger/extra-tests",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/recipes",
    "pkg": "./nebula-logger/recipes",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "NebulaLogger",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ObjectMerge 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ObjectMerge",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Query.apex 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Query.apex",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: R-apex 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "R-apex",
    "path": "R-apex/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SFDCRules 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "SFDCRules",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SObjectFabricator 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "SObjectFabricator",
    "path": "SObjectFabricator/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Salesforce-Lookup-Rollup-Summaries 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Salesforce-Lookup-Rollup-Summaries",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Salesforce-Test-Factory 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Salesforce-Test-Factory",
    "path": "Salesforce-Test-Factory/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SimpleLightningComponents 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "SimpleLightningComponents",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SmartFactory-for-Force 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "SmartFactory-for-Force",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: TestDataFactory 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "TestDataFactory",
    "path": "TestDataFactory/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: TriggerX 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "TriggerX",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Visualforce-Multiselect-Picklist 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Visualforce-Multiselect-Picklist",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Volunteers-for-Salesforce 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Volunteers-for-Salesforce",
    "path": "Volunteers-for-Salesforce/src",
    "pkg": "src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Zippex 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "Zippex",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: amoss 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "amoss",
    "path": "amoss/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-dml-manager 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-dml-manager",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-domainbuilder 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-domainbuilder",
    "path": "apex-domainbuilder/sfdx-source/fflib-apex-common-subset",
    "pkg": "sfdx-source/fflib-apex-common-subset",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-domainbuilder",
    "path": "apex-domainbuilder/sfdx-source/apex-domainbuilder",
    "pkg": "sfdx-source/apex-domainbuilder",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-domainbuilder",
    "path": "apex-domainbuilder/sfdx-source/apex-domainbuilder-samplecode",
    "pkg": "sfdx-source/apex-domainbuilder-samplecode",
    "status": 2,
  },
]
`;

exports[`Parse samples Sample: apex-lambda 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-lambda",
    "path": "apex-lambda/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-mdapi 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-mdapi",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-query-builder 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-query-builder",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-recipes 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-recipes",
    "path": "apex-recipes/force-app",
    "pkg": "force-app",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "apex-recipes",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-rest-route 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-rest-route",
    "path": "apex-rest-route/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-rollup 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-rollup",
    "path": "apex-rollup/rollup",
    "pkg": "rollup",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-rollup",
    "path": "apex-rollup/plugins/CustomObjectRollupLogger",
    "pkg": "plugins/CustomObjectRollupLogger",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-rollup",
    "path": "apex-rollup/plugins/NebulaLogger",
    "pkg": "plugins/NebulaLogger",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-rollup",
    "path": "apex-rollup/plugins/RollupCallback",
    "pkg": "plugins/RollupCallback",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-rollup",
    "path": "apex-rollup/plugins/ExtraCodeCoverage",
    "pkg": "plugins/ExtraCodeCoverage",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-rollup",
    "path": "apex-rollup/extra-tests",
    "pkg": "extra-tests",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "apex-rollup",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-sobjectdataloader 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-sobjectdataloader",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-toolingapi 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-toolingapi",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-trigger-actions-framework 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-trigger-actions-framework",
    "path": "apex-trigger-actions-framework/trigger-actions-framework",
    "pkg": "trigger-actions-framework",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-unified-logging 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "apex-unified-logging",
    "path": "apex-unified-logging/force-app",
    "pkg": "force-app",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "apex-unified-logging",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: at4dx 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "at4dx",
    "path": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "pkg": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "at4dx",
    "path": "fflib-apex-common/sfdx-source/apex-common",
    "pkg": "fflib-apex-common/sfdx-source/apex-common",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "at4dx",
    "path": "force-di/force-di",
    "pkg": "force-di/force-di",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "at4dx",
    "path": "at4dx/sfdx-source/core",
    "pkg": "at4dx/sfdx-source/core",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: automation-components 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-apex-formula-evaluator",
    "pkg": "src-apex-formula-evaluator",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-collections",
    "pkg": "src-collections",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-data",
    "pkg": "src-data",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-flows",
    "pkg": "src-flows",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-messaging",
    "pkg": "src-messaging",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-security",
    "pkg": "src-security",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-strings",
    "pkg": "src-strings",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-ui",
    "pkg": "src-ui",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "automation-components",
    "path": "automation-components/src-utilities",
    "pkg": "src-utilities",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: box-salesforce-sdk 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "box-salesforce-sdk",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: declarative-lookup-rollup-summaries 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/libs/fflib-apexmocks",
    "pkg": "dlrs/libs/fflib-apexmocks",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/libs/fflib-common",
    "pkg": "dlrs/libs/fflib-common",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/libs/lrengine",
    "pkg": "dlrs/libs/lrengine",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/libs/metadataservice",
    "pkg": "dlrs/libs/metadataservice",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/main",
    "pkg": "dlrs/main",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/default",
    "pkg": "dlrs/default",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/unpackaged/config/test",
    "pkg": "unpackaged/config/test",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/unpackaged/config/test_triggers",
    "pkg": "unpackaged/config/test_triggers",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: df12-apex-enterprise-patterns 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "df12-apex-enterprise-patterns",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: df12-deployment-tools 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "df12-deployment-tools",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: einstein-ai 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "einstein-ai",
    "path": "einstein-ai/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: esapi 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "esapi",
    "path": "esapi/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: eventlogging 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "eventlogging",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ffhttp-core 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "ffhttp-core",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: fflib-apex-common 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "fflib-apex-common",
    "path": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "pkg": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "fflib-apex-common",
    "path": "fflib-apex-common/sfdx-source/apex-common",
    "pkg": "fflib-apex-common/sfdx-source/apex-common",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: fflib-apex-common-samplecode 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "fflib-apex-common-samplecode",
    "path": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "pkg": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "fflib-apex-common-samplecode",
    "path": "fflib-apex-common/sfdx-source/apex-common",
    "pkg": "fflib-apex-common/sfdx-source/apex-common",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "fflib-apex-common-samplecode",
    "path": "fflib-apex-common-samplecode/sfdx-source/apex-common-samplecode",
    "pkg": "fflib-apex-common-samplecode/sfdx-source/apex-common-samplecode",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: fflib-apex-mocks 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "fflib-apex-mocks",
    "path": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "pkg": "sfdx-source/apex-mocks",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: flowtoolbelt 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "flowtoolbelt",
    "path": "flowtoolbelt/force-app",
    "pkg": "force-app",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "flowtoolbelt",
    "path": "flowtoolbelt/force-app-test",
    "pkg": "force-app-test",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: force-di 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "force-di",
    "path": "force-di/force-di",
    "pkg": "force-di",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: forcedotcom-enterprise-architecture 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "forcedotcom-enterprise-architecture",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: forcelog 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "forcelog",
    "path": "forcelog/src",
    "pkg": "src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: grid 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "grid",
    "path": "grid/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: jsonparse 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "jsonparse",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: logger 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "logger",
    "path": "logger/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: processBuilderBlocks 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "processBuilderBlocks",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: promise 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "promise",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: promiseV3 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "promiseV3",
    "path": "promiseV3/force-app",
    "pkg": "force-app",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "promiseV3",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: q 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "q",
    "path": "q/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: quiz-host-app 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "quiz-host-app",
    "path": "quiz-host-app/src",
    "pkg": "src",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "quiz-host-app",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: rflib 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "rflib",
    "path": "rflib/rflib",
    "pkg": "rflib",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "rflib",
    "path": "rflib/rflib-fs",
    "pkg": "rflib-fs",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "rflib",
    "path": "rflib/rflib-tf",
    "pkg": "rflib-tf",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "rflib",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sObject-Remote 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sObject-Remote",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: salesforce-bot-toolkit 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "salesforce-bot-toolkit",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: salesforce-limit-monitor 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "salesforce-limit-monitor",
    "path": "salesforce-limit-monitor/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: selector 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "selector",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sendgrid-apex 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sendgrid-apex",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sf-sandbox-post-copy 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sf-sandbox-post-copy",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdc-convert-attachments-to-chatter-files 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sfdc-convert-attachments-to-chatter-files",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdc-oauth-playground 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sfdc-oauth-playground",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdc-related-files-lightning 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sfdc-related-files-lightning",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdc-trigger-framework 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sfdc-trigger-framework",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdx-mass-action-scheduler 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sfdx-mass-action-scheduler",
    "path": "sfdx-mass-action-scheduler/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdx-simple 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sfdx-simple",
    "path": "sfdx-simple/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sirono-common 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sirono-common",
    "path": "sirono-common/force-app/main/default",
    "pkg": "force-app/main/default",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sirono-common",
    "path": "sirono-common/force-app/test/default",
    "pkg": "force-app/test/default",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sobject-work-queue 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "sobject-work-queue",
    "path": "sobject-work-queue/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: soql-secure 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "soql-secure",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: survey-force 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "survey-force",
    "path": "survey-force/force-app",
    "pkg": "force-app",
    "status": 0,
  },
  {
    "errors": [],
    "extensions": [
      ".apex",
    ],
    "name": "survey-force",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: twilio-salesforce 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "twilio-salesforce",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: user-access-visualization 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "user-access-visualization",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: visualforce-table-grid 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "visualforce-table-grid",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: visualforce-typeahead 1`] = `
[
  {
    "errors": [],
    "extensions": [
      ".cls",
      ".trigger",
    ],
    "name": "visualforce-typeahead",
    "path": ".",
    "status": 0,
  },
]
`;
